--- a/privateservermotd/index.html
+++ b/privateservermotd/index.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="monkey website" />
   <meta name="theme-color" content="#00ff00">
   <meta property="og:site_name" content="ate shit penis">
-  <meta property="og:image" content="https://websitev2.gameyboi.repl.co/privateservermotd/images/balls.jpg">
+  <meta property="og:image" content="media/balls.jpg">
   <meta name="twitter:card" content="summary_large_image">
 </head>
 
@@ -24,24 +24,24 @@
 
 <div class="based">
 <video autoplay loop muted height="300">
-  <source src="videos/monkey.webm" type="video/webm">
+  <source src="media/monkey.webm" type="video/webm">
 </video>
 
 <video autoplay loop muted height="300">
-  <source src="videos/orange.webm" type="video/webm">
+  <source src="media/orange.webm" type="video/webm">
 </video>
 
 <h1>its time to spank that monkey!!!!😳😳😳</h1>
 </div>
 
 <video autoplay loop muted height="245">
-  <source src="videos/money.webm" type="video/webm">
+  <source src="media/money.webm" type="video/webm">
 </video>
 <video autoplay loop muted height="245">
-  <source src="videos/iphone.webm" type="video/webm">
+  <source src="media/iphone.webm" type="video/webm">
 </video>
 <video autoplay loop muted height="300">
-  <source src="videos/thug.webm" type="video/webm">
+  <source src="medias/thug.webm" type="video/webm">
 </video>
 
 </body>
