bug fixes and changes
Fixed an issue where on small devices the navbar buttons would cover each other, resized a lot of elements to make them fit better on different devices, added some more text to the main page, reduced the size of an image, simplified some code and updated the readme

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chimp Zone</title>
+    <title>8BitFenix</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="style.css" rel="stylesheet" type="text/css" />
 
-    <meta property="og:title" content="Chimp Zone" />
-    <meta property="og:description" content="Private and public game servers hosted by 8BitFenix" />
+    <meta property="og:title" content="8BitFenix" />
+    <meta property="og:description" content="Site for my stuff." />
     <link rel="shortcut icon" href="media/favicon.jpg" />
 
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <meta name="description" content="Private and public game servers hosted by 8BitFenix">
+    <meta name="description" content="Site for my stuff.">
     <meta property="og:site_name" content="8BitFenix">
     <meta property="og:image" content="media/8BitFenixLogo.png">
     <meta name="twitter:card" content="summary_large_image">
@@ -26,7 +28,7 @@
     </nav>
     <div class="text">
     <h1>8BitFenix</h1>
-    <p>Website for my stuff</p>
+    <p>Website for my stuff. Currently it's quite barren, but that will probably change sometime in the future. Check out the servers tab for links to gameservers I'm currently running.</p>
     </div>
   </body>
 </html>
