--- a/servers/index.html
+++ b/servers/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Chimp Zone</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="style.css" rel="stylesheet" type="text/css" />
 
     <meta property="og:title" content="Chimp Zone" />
