bugfixes and more servers
Removed redundant style.css references, fixed misspelling in video url, added some more upcoming servers

--- a/privateservermotd/index.html
+++ b/privateservermotd/index.html
@@ -41,7 +41,7 @@
   <source src="media/iphone.webm" type="video/webm">
 </video>
 <video autoplay loop muted height="300">
-  <source src="medias/thug.webm" type="video/webm">
+  <source src="media/thug.webm" type="video/webm">
 </video>
 
 </body>
