--- a/servers/index.html
+++ b/servers/index.html
@@ -5,13 +5,12 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../style.css" rel="stylesheet" type="text/css" />
 
     <meta property="og:title" content="Chimp Zone" />
     <meta property="og:description" content="Private and public game servers hosted by 8BitFenix" />
     <link rel="shortcut icon" href="media/favicon.jpg" />
 
-    <link href="../style.css" rel="stylesheet" type="text/css" />
     <meta name="description" content="Private and public game servers hosted by 8BitFenix">
     <meta property="og:site_name" content="8BitFenix">
     <meta property="og:image" content="media/8BitFenixLogo.png">
@@ -49,6 +48,11 @@
     <ul>
       <li><a href="../underconstruction.html">Deathmatch (Coming Soon) </a></li>
       <li><a href="../underconstruction.html">Arsenal (Coming Soon) </a></li>
+      <li><a href="../underconstruction.html">Infection (Coming Soon) </a></li>
+    </ul>
+    <h3>Sanicball:</h3>
+    <ul>
+      <li><a href="../underconstruction.html">Sanicball (Coming Soon) </a></li>
     </ul>
   </body>
 </html>
