updates and fixes
fixed broken image links, updated server ip addresses and added some more videos for private server motds

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta name="description" content="Site for my stuff.">
     <meta property="og:site_name" content="8BitFenix">
-    <meta property="og:image" content="media/8BitFenixLogo.png">
+    <meta property="og:image" content="https://websitev2.gameyboi.repl.co/media/8BitFenixLogo.png">
     <meta name="twitter:card" content="summary_large_image">
   </head>
   <body>
