--- a/privateservermotd/index.html
+++ b/privateservermotd/index.html
@@ -2,48 +2,6 @@
 <html>
 
 <head>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <title>🐒🐒🐒🐒🐒</title>
-  <meta property="og:title" content="🐒🐒🐒🐒🐒" />
-  <meta name="description" content="monkey">
-  <meta property="og:description" content="monkey website" />
-  <meta name="theme-color" content="#00ff00">
-  <meta property="og:site_name" content="ate shit penis">
-  <meta property="og:image" content="media/balls.jpg">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta http-equiv="Refresh" content="0; url='https://websitev2.gameyboi.repl.co/privateservermotd/seal.html'" />
 </head>
-
-<body>
-
-<div class="orange">
-<h1>its monkey o clock!!!!!!!😄🐒🐒🐒🐒</h1>
-<audio controls>
-  <source src="pizza.mp3" type="audio/mpeg">
-</audio>
-</div>
-
-<div class="based">
-<video autoplay loop muted height="300">
-  <source src="media/monkey.webm" type="video/webm">
-</video>
-
-<video autoplay loop muted height="300">
-  <source src="media/orange.webm" type="video/webm">
-</video>
-
-<h1>its time to spank that monkey!!!!😳😳😳</h1>
-</div>
-
-<video autoplay loop muted height="245">
-  <source src="media/money.webm" type="video/webm">
-</video>
-<video autoplay loop muted height="245">
-  <source src="media/iphone.webm" type="video/webm">
-</video>
-<video autoplay loop muted height="300">
-  <source src="media/thug.webm" type="video/webm">
-</video>
-
-</body>
-
 </html>
