--- a/privateservermotd/index.html
+++ b/privateservermotd/index.html
@@ -2,6 +2,6 @@
 <html>
 
 <head>
-  <meta http-equiv="Refresh" content="0; url='https://websitev2.gameyboi.repl.co/privateservermotd/seal.html'" />
+  <meta http-equiv="Refresh" content="0; url='../privateservermotd/seal.html'" />
 </head>
 </html>
