csgo section with rickroll

--- a/servers/index.html
+++ b/servers/index.html
@@ -44,6 +44,10 @@
       <li><a href="steam://connect/75.85.184.227:20011">Private Sandbox</a></li>
       <li><a href="steam://connect/75.85.184.227:20014">Private TTT</a></li>
     </ul>
+    <h3>Counter-Strike: Global Offensive:</h3>
+    <ul>
+      <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Private CS:GO</a></li>
+    </ul>
     <h3>Open Fortress:</h3>
     <ul>
       <li><a href="../underconstruction.html">Deathmatch (Coming Soon) </a></li>
