--- a/privateservermotd/monkey.html
+++ b/privateservermotd/monkey.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="monkeystyle.css" rel="stylesheet" type="text/css" />
   <title>🐒🐒🐒🐒🐒</title>
   <meta property="og:title" content="🐒🐒🐒🐒🐒" />
   <meta name="description" content="monkey">
