--- a/privateservermotd/seal.html
+++ b/privateservermotd/seal.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link href="zerotwostyle.css" rel="stylesheet" type="text/css" />
+  <link href="generalstyle.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
