ip updates + link to prophunt server

--- a/servers/index.html
+++ b/servers/index.html
@@ -25,14 +25,7 @@
       <a href="../servers/"><b>Servers</b></a>
     </div>
     </nav>
-    <h1>Chimp Zone</h1>
-    <p>Private and public game servers hosted by 8BitFenix</p>
-    <h2>Server Rules:</h2>
-    <ol>
-      <li>Don't be an asshole</li>
-      <li>Use common sense</li>
-    </ol>
-    <h2>Game Servers:</h2>
+    <h1>Game Servers:</h1>
     <h3>Team Fortress 2:</h3>
     <ul>
       <li><a href="steam://connect/75.85.184.227:20001">Private TF2</a></li>
@@ -41,8 +34,9 @@
     </ul>
     <h3>Garry's Mod:</h3>
     <ul>
-      <li><a href="steam://connect/75.85.184.227:20011">Private Sandbox</a></li>
-      <li><a href="steam://connect/75.85.184.227:20014">Private TTT</a></li>
+      <li><a href="steam://connect/75.85.187.67:20011">Private Sandbox</a></li>
+      <li><a href="steam://connect/75.85.187.67:20014">Private TTT</a></li>
+      <li><a href="steam://connect/75.85.187.67:20017">Private Prophunt</a></li>
     </ul>
     <h3>Counter-Strike: Global Offensive:</h3>
     <ul>
